--- a/index.html
+++ b/index.html
@@ -3,85 +3,85 @@
 <html lang="en">
 <head>
 
-	<title></title>
+	<title>TriviaGame</title>
 </head>
 <body>
 
 
-<p class="question">1. What is the answer to this question?</p>        
+<p class="question">1. Which species of tree was named the state tree in 1963?</p>        
 
 <ul class="answers">            
-<input type="radio" name="q1" value="a" id="q1a"><label for="q1a">Answer 1</label><br/>          
-<input type="radio" name="q1" value="b" id="q1b"><label for="q1b">Answer 2</label><br/>            
-<input type="radio" name="q1" value="c" id="q1c"><label for="q1c">Answer 3</label><br/>            
-<input type="radio" name="q1" value="d" id="q1d"><label for="q1d">Answer 4</label><br/>       
+<input type="radio" name="q1" value="a" id="q1a"><label for="q1a">Oak</label><br/>          
+<input type="radio" name="q1" value="b" id="q1b"><label for="q1b">Pine</label><br/>            
+<input type="radio" name="q1" value="c" id="q1c"><label for="q1c">Maple</label><br/>            
+<input type="radio" name="q1" value="d" id="q1d"><label for="q1d">Hickory</label><br/>       
 </ul>        
 
 
-<p class="question">2. What is the answer to this question?</p>        
+<p class="question">2. Which fruit was named the official fruit in 2001?</p>        
 
 <ul class="answers">            
-<input type="radio" name="q2" value="a" id="q2a"><label for="q2a">Answer 1</label><br/>           
-<input type="radio" name="q2" value="b" id="q2b"><label for="q2b">Answer 2</label><br/>            
-<input type="radio" name="q2" value="c" id="q2c"><label for="q2c">Answer 3</label><br/>           
-<input type="radio" name="q2" value="d" id="q2d"><label for="q2d">Answer 4</label><br/>       
+<input type="radio" name="q2" value="a" id="q2a"><label for="q2a">Scuppernong grape</label><br/>           
+<input type="radio" name="q2" value="b" id="q2b"><label for="q2b">Peach</label><br/>            
+<input type="radio" name="q2" value="c" id="q2c"><label for="q2c">Apple</label><br/>           
+<input type="radio" name="q2" value="d" id="q2d"><label for="q2d">Muscadine grape</label><br/>       
 </ul>        
 
-<p class="question">3. What is the answer to this question?</p>        
+<p class="question">3. What is the official bird of our fair state?</p>        
 
 <ul class="answers">            
-<input type="radio" name="q3" value="a" id="q3a"><label for="q3a">Answer 1</label><br/>            
-<input type="radio" name="q3" value="b" id="q3b"><label for="q3b">Answer 2</label><br/>            
-<input type="radio" name="q3" value="c" id="q3c"><label for="q3c">Answer 3</label><br/>           
-<input type="radio" name="q3" value="d" id="q3d"><label for="q3d">Answer 4</label><br/>       
+<input type="radio" name="q3" value="a" id="q3a">Mockingbird<label for="q3a">Answer 1</label><br/>            
+<input type="radio" name="q3" value="b" id="q3b"><label for="q3b">American Robin</label><br/>            
+<input type="radio" name="q3" value="c" id="q3c"><label for="q3c">Eastern Bluebird</label><br/>           
+<input type="radio" name="q3" value="d" id="q3d"><label for="q3d">Cardinal</label><br/>       
 </ul>        
 
-<p class="question">4. What is the answer to this question?</p>        
+<p class="question">4. Which two dances have been named the official dances, one popular and one folk?</p>        
 
 <ul class="answers">           
-<input type="radio" name="q4" value="a" id="q4a"><label for="q4a">Answer 1</label><br/>            
-<input type="radio" name="q4" value="b" id="q4b"><label for="q4b">Answer 2</label><br/>            
-<input type="radio" name="q4" value="c" id="q4c"><label for="q4c">Answer 3</label><br/>            
-<input type="radio" name="q4" value="d" id="q4d"><label for="q4d">Answer 4</label><br/>        
+<input type="radio" name="q4" value="a" id="q4a"><label for="q4a">theTwist and the Shag</label><br/>            
+<input type="radio" name="q4" value="b" id="q4b"><label for="q4b">Virginia Reel and Clogging</label><br/>            
+<input type="radio" name="q4" value="c" id="q4c"><label for="q4c">Clogging and the Shag</label><br/>            
+<input type="radio" name="q4" value="d" id="q4d"><label for="q4d">Contra and the Twist</label><br/>        
 </ul>        
 
-<p class="question">5. What is the answer to this question?</p>        
+<p class="question">5. Which carniverous plant was named the state representative?</p>        
 
 <ul class="answers">            
-<input type="radio" name="q5" value="a" id="q5a"><label for="q5a">Answer 1</label><br/>            
-<input type="radio" name="q5" value="b" id="q5b"><label for="q5b">Answer 2</label><br/>            
-<input type="radio" name="q5" value="c" id="q5c"><label for="q5c">Answer 3</label><br/>           
-<input type="radio" name="q5" value="d" id="q5d"><label for="q5d">Answer 4</label><br/>        
+<input type="radio" name="q5" value="a" id="q5a"><label for="q5a">Sundew</label><br/>            
+<input type="radio" name="q5" value="b" id="q5b"><label for="q5b">Venus Flytrap</label><br/>            
+<input type="radio" name="q5" value="c" id="q5c"><label for="q5c">Pitcher Plant</label><br/>           
+<input type="radio" name="q5" value="d" id="q5d"><label for="q5d">Purple Bladderwort</label><br/>        
 </ul>        
 
-<p class="question">6. What is the answer to this question?</p>        
+<p class="question">6. What is the official mineral of North Carolina?</p>        
 
 <ul class="answers">            
-<input type="radio" name="q6" value="a" id="q6a"><label for="q6a">Answer 1</label><br/>            
-<input type="radio" name="q6" value="b" id="q6b"><label for="q6b">Answer 2</label><br/>            
-<input type="radio" name="q6" value="c" id="q6c"><label for="q6c">Answer 3</label><br/>            
-<input type="radio" name="q6" value="d" id="q6d"><label for="q6d">Answer 4</label><br/>        
+<input type="radio" name="q6" value="a" id="q6a"><label for="q6a">Gold</label><br/>            
+<input type="radio" name="q6" value="b" id="q6b"><label for="q6b">Iron</label><br/>            
+<input type="radio" name="q6" value="c" id="q6c"><label for="q6c">Rock Salt</label><br/>            
+<input type="radio" name="q6" value="d" id="q6d"><label for="q6d">Silver</label><br/>        
 </ul>       
 
-<p class="question">7. What is the answer to this question?</p>        
+<p class="question">7. What are the two official colors of North Carolina?</p>        
 
 <ul class="answers">            
-<input type="radio" name="q7" value="a" id="q7a"><label for="q7a">Answer 1</label><br/>            
-<input type="radio" name="q7" value="b" id="q7b"><label for="q7b">Answer 2</label><br/>            
-<input type="radio" name="q7" value="c" id="q7c"><label for="q7c">Answer 3</label><br/>            
-<input type="radio" name="q7" value="d" id="q7d"><label for="q7d">Answer 4</label><br/>        
+<input type="radio" name="q7" value="a" id="q7a"><label for="q7a">Red and White</label><br/>            
+<input type="radio" name="q7" value="b" id="q7b"><label for="q7b">White and Blue</label><br/>            
+<input type="radio" name="q7" value="c" id="q7c"><label for="q7c">Blue and Red</label><br/>            
+<input type="radio" name="q7" value="d" id="q7d"><label for="q7d">Blue and Yellow</label><br/>        
 </ul>        
 
-<p class="question">8. What is the answer to this question?</p>        
+<p class="question">8. Which type of boat was named the official historic boat?</p>        
 
 <ul class="answers">            
-<input type="radio" name="q8" value="a" id="q8a"><label for="q8a">Answer 1</label><br/>            
-<input type="radio" name="q8" value="b" id="q8b"><label for="q8b">Answer 2</label><br/>            
-<input type="radio" name="q8" value="c" id="q8c"><label for="q8c">Answer 3</label><br/>            
-<input type="radio" name="q8" value="d" id="q8d"><label for="q8d">Answer 4</label><br/>       
+<input type="radio" name="q8" value="a" id="q8a"><label for="q8a">Dory</label><br/>            
+<input type="radio" name="q8" value="b" id="q8b"><label for="q8b">Shad boat</label><br/>            
+<input type="radio" name="q8" value="c" id="q8c"><label for="q8c">Yawl</label><br/>            
+<input type="radio" name="q8" value="d" id="q8d"><label for="q8d">Row boat</label><br/>       
 </ul>        
 
-<p class="question">9. What is the answer to this question?</p>        
+<p class="question">9. What is the state flower of North Carolina?</p>        
 
 <ul class="answers">            
 <input type="radio" name="q9" value="a" id="q9a"><label for="q9a">Answer 1</label><br/>            
