--- a/index.html
+++ b/index.html
@@ -1,23 +1,57 @@
-<!doctype html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>Trivia Game</title>
+	<meta charset="utf-8">
+	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>TriviaGame</title>
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+		<link rel="stylesheet" type="text/javascript" href="assets/javascript/app.js">
 </head>
+
 <body>
+	<header id="masthead">
+		<div class="container">
+			<a href="index.html" id="logo">North Carolina Trivia Game</a>
+			<nav>
+			
+			<a href="score.html">Results</a>
+			</nav>
+		</div>
+	</header>
 
+	<!-- player instructions -->
+	<div class="gamerules">
+		<p>How much do you know about the symbols that make North Carolina a special state? Can you answer ten questions in 4 minutes?</p>
+		<br>
+		<p>Start by clicking the 'Start' button. Then read the questions and pick an answer from each set of choices given. The game will keep score for you.</p>
+		<br>
+		<p>
+		If you finish before the timer stops click the 'All Done' button at the end. Then you will see your score.</p>
+		<br>
+	<p>Good Luck!</p>
 
-<p class="question">1. Which species of tree was named the state tree in 1963?</p>        
+	</div>
 
-<ul class="answers">            
-<input type="radio" name="q1" value="a" id="q1a"><label for="q1a">Oak</label><br/>          
-<input type="radio" name="q1" value="b" id="q1b"><label for="q1b">Pine</label><br/>            
-<input type="radio" name="q1" value="c" id="q1c"><label for="q1c">Maple</label><br/>            
-<input type="radio" name="q1" value="d" id="q1d"><label for="q1d">Hickory</label><br/>       
-</ul>        
+<div class="startand stop">
+<button type="button" >Start</button>
+</div>
+ 
+ <div class="questions">
+<div>
+	<p class="question">1. Which species of tree was named the state tree in 1963?</p>        
 
+	<ul class="answers">            
+	<input type="radio" name="q1" value="a" id="q1a"	><label for="q1a">Oak</label><br/>          
+	<input type="radio" name="q1" value="b" id="q1b"><label for="q1b">Pine</label><br/>            
+	<input type="radio" name="q1" value="c" id="q1c"><label for="q1c">Maple</label><br/>            
+	<input type="radio" name="q1" value="d" id="q1d"><label for="q1d">Hickory</label><br/>       
+	</ul>        
+</div>
 
+<div>
 <p class="question">2. Which fruit was named the official fruit in 2001?</p>        
 
 <ul class="answers">            
@@ -25,7 +59,10 @@
 <input type="radio" name="q2" value="b" id="q2b"><label for="q2b">Peach</label><br/>            
 <input type="radio" name="q2" value="c" id="q2c"><label for="q2c">Apple</label><br/>           
 <input type="radio" name="q2" value="d" id="q2d"><label for="q2d">Muscadine grape</label><br/>       
-</ul>        
+</ul>    
+</div>
+
+<div>    
 
 <p class="question">3. What is the official bird of our fair state?</p>        
 
@@ -34,7 +71,10 @@
 <input type="radio" name="q3" value="b" id="q3b"><label for="q3b">American Robin</label><br/>            
 <input type="radio" name="q3" value="c" id="q3c"><label for="q3c">Eastern Bluebird</label><br/>           
 <input type="radio" name="q3" value="d" id="q3d"><label for="q3d">Cardinal</label><br/>       
-</ul>        
+</ul>  
+</div> 
+
+<div>     
 
 <p class="question">4. Which two dances have been named the official dances, one popular and one folk?</p>        
 
@@ -43,8 +83,11 @@
 <input type="radio" name="q4" value="b" id="q4b"><label for="q4b">Virginia Reel and Clogging</label><br/>            
 <input type="radio" name="q4" value="c" id="q4c"><label for="q4c">Clogging and the Shag</label><br/>            
 <input type="radio" name="q4" value="d" id="q4d"><label for="q4d">Contra and the Twist</label><br/>        
-</ul>        
+</ul> 
 
+</div>       
+
+<div>
 <p class="question">5. Which carniverous plant was named the state representative?</p>        
 
 <ul class="answers">            
@@ -52,8 +95,10 @@
 <input type="radio" name="q5" value="b" id="q5b"><label for="q5b">Venus Flytrap</label><br/>            
 <input type="radio" name="q5" value="c" id="q5c"><label for="q5c">Pitcher Plant</label><br/>           
 <input type="radio" name="q5" value="d" id="q5d"><label for="q5d">Purple Bladderwort</label><br/>        
-</ul>        
+</ul> 
+</div>       
 
+<div>
 <p class="question">6. What is the official mineral of North Carolina?</p>        
 
 <ul class="answers">            
@@ -61,8 +106,10 @@
 <input type="radio" name="q6" value="b" id="q6b"><label for="q6b">Iron</label><br/>            
 <input type="radio" name="q6" value="c" id="q6c"><label for="q6c">Rock Salt</label><br/>            
 <input type="radio" name="q6" value="d" id="q6d"><label for="q6d">Silver</label><br/>        
-</ul>       
+</ul> 
+</div>      
 
+<div>
 <p class="question">7. What are the two official colors of North Carolina?</p>        
 
 <ul class="answers">            
@@ -70,8 +117,10 @@
 <input type="radio" name="q7" value="b" id="q7b"><label for="q7b">White and Blue</label><br/>            
 <input type="radio" name="q7" value="c" id="q7c"><label for="q7c">Blue and Red</label><br/>            
 <input type="radio" name="q7" value="d" id="q7d"><label for="q7d">Blue and Yellow</label><br/>        
-</ul>        
+</ul> 
+</div> 
 
+<div>
 <p class="question">8. Which type of boat was named the official historic boat?</p>        
 
 <ul class="answers">            
@@ -79,25 +128,29 @@
 <input type="radio" name="q8" value="b" id="q8b"><label for="q8b">Shad boat</label><br/>            
 <input type="radio" name="q8" value="c" id="q8c"><label for="q8c">Yawl</label><br/>            
 <input type="radio" name="q8" value="d" id="q8d"><label for="q8d">Row boat</label><br/>       
-</ul>        
+</ul>    
+</div>
 
+<div>  
 <p class="question">9. What is the state flower of North Carolina?</p>        
 
 <ul class="answers">            
-<input type="radio" name="q9" value="a" id="q9a"><label for="q9a">Answer 1</label><br/>            
-<input type="radio" name="q9" value="b" id="q9b"><label for="q9b">Answer 2</label><br/>            
-<input type="radio" name="q9" value="c" id="q9c"><label for="q9c">Answer 3</label><br/>            
-<input type="radio" name="q9" value="d" id="q9d"><label for="q9d">Answer 4</label><br/>        
-</ul>        
+<input type="radio" name="q9" value="a" id="q9a"><label for="q9a">Mountain Laurel</label><br/>       
+<input type="radio" name="q9" value="b" id="q9b"><label for="q9b">Southern Magnolia</label><br/>            
+<input type="radio" name="q9" value="c" id="q9c"><label for="q9c">Redbud</label><br/>            
+<input type="radio" name="q9" value="d" id="q9d"><label for="q9d">Flowering Dogwood</label><br/>     </ul>  
+</div>  
 
-<p class="question">10. What is the answer to this question?</p>        
+<div>   
+<p class="question">10. What is the official dog breed?</p>        
 
 <ul class="answers">           
-<input type="radio" name="q10" value="a" id="q10a"><label for="q10a">Answer 1</label><br/>            
-<input type="radio" name="q10" value="b" id="q10b"><label for="q10b">Answer 2</label><br/>            
-<input type="radio" name="q10" value="c" id="q10c"><label for="q10c">Answer 3</label><br/>            
-<input type="radio" name="q10" value="d" id="q10d"><label for="q10d">Answer 4</label><br/>        
-</ul>        
+<input type="radio" name="q10" value="a" id="q10a"><label for="q10a">Plott Hound</label><br/>            
+<input type="radio" name="q10" value="b" id="q10b"><label for="q10b">Treeing Walker Coonhound</label><br/>            
+<input type="radio" name="q10" value="c" id="q10c"><label for="q10c">Blue Tick Coonound</label><br/>            
+<input type="radio" name="q10" value="d" id="q10d"><label for="q10d">Bloodhound</label><br/>        
+</ul> 
+</div>       
 
 <br/>
 <div id="results">            
@@ -106,58 +159,59 @@ Show me the answers!
 
 <div id="category1">            
 <p>              
-<strong>Question 1:</strong> The correct answer is the <strong>Answer 1</strong>.</p>        
+<strong>Question 1:</strong> The correct answer is <strong>Pine</strong>.</p>        
 </div>        
 
 <div id="category2">            
 <p>              
-<strong>Question 2:</strong> The correct answer is <strong>Answer 2</strong>.</p>        
+<strong>Question 2:</strong> The correct answer is <strong>Scuppernong grape</strong>.</p>        
 </div>        
 
 <div id="category3">            
 <p>                
-<strong>Question 3:</strong> The correct answer is <strong>Answer 3</strong>.</p>        
+<strong>Question 3:</strong> The correct answer is <strong>Cardinal</strong>.</p>        
 </div>        
 
 <div id="category4">            
 <p>               
-<strong>Question 4:</strong> The correct answer is <strong>Answer 4</strong>.</p>        
+<strong>Question 4:</strong> The correct answer is <strong>Clogging and the Shag</strong>.</p>        
 </div>        
 
 <div id="category5">            
 <p>                
-<strong>Question 5:</strong> The correct answer is <strong>Answer 1</strong>.</p>        
+<strong>Question 5:</strong> The correct answer is <strong>Venus Flytrap</strong>.</p>        
 </div>        
 
 <div id="category6">            
 <p>                
-<strong>Question 6:</strong> The correct answer is <strong>Answer 2</strong>.</p>        
+<strong>Question 6:</strong> The correct answer is <strong>Gold</strong>.</p>        
 </div>        
 
 <div id="category7">            
 <p>                
-<strong>Question 7:</strong> The correct answer is <strong>Answer 3</strong>.</p>        
+<strong>Question 7:</strong> The correct answer is <strong>Blue and Red</strong>.</p>        
 </div>        
 
 <div id="category8">            
 <p>               
-<strong>Question 8:</strong> The correct answer is <strong>Answer 4</strong>.</p>        
+<strong>Question 8:</strong> The correct answer is <strong>Shad Boat</strong>.</p>        
 </div>        
 
 <div id="category9">           
 <p>               
-<strong>Question 9:</strong> The correct answer is <strong>Answer 1</strong>.</p>        
+<strong>Question 9:</strong> The correct answer is <strong>Flowering Dogwood</strong>.</p>        
 </div>        
 
 <div id="category10">            
 <p>                
-<strong>Question 10:</strong> The correct answer is <strong>Answer 2</strong>.</p>        
+<strong>Question 10:</strong> The correct answer is <strong>Plott Hound</strong>.</p>        
 </div>        
 
 <div id="category11">            
 <p>                
 You answered them all right!</p>        
 </div>
+<script src="assets/javascript/app.js"></script>
 
 </body>
 </html>
