--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/javascript" href="assets/javascript/app.js">
+		
 </head>
 
 <body>
 	<header id="masthead">
 		<div class="container">
 			<a href="index.html" id="logo">North Carolina Trivia Game</a>
+
 			<nav>
 			
-			<a href="score.html">Results</a>
+			<a href="results.html">Score Page</a>
 			</nav>
 		</div>
 	</header>
@@ -67,7 +69,7 @@
 <p class="question">3. What is the official bird of our fair state?</p>        
 
 <ul class="answers">            
-<input type="radio" name="q3" value="a" id="q3a">Mockingbird<label for="q3a">Answer 1</label><br/>            
+<input type="radio" name="q3" value="a" id="q3a"><label for="q3a">Mockingbird</label><br/>            
 <input type="radio" name="q3" value="b" id="q3b"><label for="q3b">American Robin</label><br/>            
 <input type="radio" name="q3" value="c" id="q3c"><label for="q3c">Eastern Bluebird</label><br/>           
 <input type="radio" name="q3" value="d" id="q3d"><label for="q3d">Cardinal</label><br/>       
@@ -153,65 +155,20 @@
 </div>       
 
 <br/>
-<div id="results">            
-Show me the answers!       
+<div id="results">
+	<h2>Show me the answers!</h2>
+<button type="button">Score</button>
+</div>            
+       
 </div>                
 
-<div id="category1">            
-<p>              
-<strong>Question 1:</strong> The correct answer is <strong>Pine</strong>.</p>        
-</div>        
 
-<div id="category2">            
-<p>              
-<strong>Question 2:</strong> The correct answer is <strong>Scuppernong grape</strong>.</p>        
-</div>        
-
-<div id="category3">            
-<p>                
-<strong>Question 3:</strong> The correct answer is <strong>Cardinal</strong>.</p>        
-</div>        
-
-<div id="category4">            
-<p>               
-<strong>Question 4:</strong> The correct answer is <strong>Clogging and the Shag</strong>.</p>        
-</div>        
-
-<div id="category5">            
-<p>                
-<strong>Question 5:</strong> The correct answer is <strong>Venus Flytrap</strong>.</p>        
-</div>        
-
-<div id="category6">            
-<p>                
-<strong>Question 6:</strong> The correct answer is <strong>Gold</strong>.</p>        
-</div>        
-
-<div id="category7">            
-<p>                
-<strong>Question 7:</strong> The correct answer is <strong>Blue and Red</strong>.</p>        
-</div>        
-
-<div id="category8">            
-<p>               
-<strong>Question 8:</strong> The correct answer is <strong>Shad Boat</strong>.</p>        
-</div>        
-
-<div id="category9">           
-<p>               
-<strong>Question 9:</strong> The correct answer is <strong>Flowering Dogwood</strong>.</p>        
-</div>        
-
-<div id="category10">            
-<p>                
-<strong>Question 10:</strong> The correct answer is <strong>Plott Hound</strong>.</p>        
-</div>        
-
-<div id="category11">            
-<p>                
-You answered them all right!</p>        
-</div>
 <script src="assets/javascript/app.js"></script>
+	<footer>
+		<div class="container">
+			&copy; Copyright 2016 Your Name
+		</div>
+	</footer>
 
 </body>
 </html>
