--- a/results.html
+++ b/results.html
@@ -2,9 +2,87 @@
 <html>
 
 <head>
-	<title></title>
+	<meta charset="utf-8">
+	<title>results</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
 </head>
 <body>
+	<header id="masthead">
+		<div class="container">
+			<nav>
+				<a href="index.html">Game Page</a>
+				<a href="results.html">Score Page</a>
+			</nav>
+		</div>	
+	</header>
 
+	<main class="container">
+		<section class="answers">
+			<h1>And the Answers are...</h1>
+		</section>
+	</main>
+
+<div id="category1">
+<p>
+<strong>Question 1:</strong> The correct answer is <strong>Pine</strong>.</p>               
+</div>        
+
+<div id="category2">            
+<p>              
+<strong>Question 2:</strong> The correct answer is <strong>Scuppernong grape</strong>.</p>        
+</div>        
+
+<div id="category3">            
+<p>                
+<strong>Question 3:</strong> The correct answer is <strong>Cardinal</strong>.</p>        
+</div>        
+
+<div id="category4">            
+<p>               
+<strong>Question 4:</strong> The correct answer is <strong>Clogging and the Shag</strong>.</p>        
+</div>        
+
+<div id="category5">            
+<p>                
+<strong>Question 5:</strong> The correct answer is <strong>Venus Flytrap</strong>.</p>        
+</div>        
+
+<div id="category6">            
+<p>                
+<strong>Question 6:</strong> The correct answer is <strong>Gold</strong>.</p>        
+</div>        
+
+<div id="category7">            
+<p>                
+<strong>Question 7:</strong> The correct answer is <strong>Blue and Red</strong>.</p>        
+</div>        
+
+<div id="category8">            
+<p>               
+<strong>Question 8:</strong> The correct answer is <strong>Shad Boat</strong>.</p>        
+</div>        
+
+<div id="category9">           
+<p>               
+<strong>Question 9:</strong> The correct answer is <strong>Flowering Dogwood</strong>.</p>        
+</div>        
+
+<div id="category10">            
+<p>                
+<strong>Question 10:</strong> The correct answer is <strong>Plott Hound</strong>.</p>        
+</div>        
+
+<div id="category11">            
+<p>                
+You answered them all right!</p>        
+</div>
+<script src="assets/javascript/app.js"></script>
+
+	<footer>
+		<div class="container">
+			&copy; Copyright 2016 Jay M Frimmel
+		</div>
+	</footer>
 </body>
 </html>
